<resources>
    <string name="app_name">warehouse2</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- BUTTONS -->
    <string name="action_sign_in">Sign in</string>
    <string name="add_product_button">Add</string>
    <string name="remove_product_button">Remove</string>
    <string name="tv_quantity">Quantity</string>
    <string name="tv_price">Price</string>
    <string name="tv_model">Model</string>
    <string name="tv_manufacturer">Manufacturer</string>
    <string name="button_save">Save</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

</resources>