<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_product_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.ProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_manufacturer" />

            <EditText
                android:id="@+id/editText_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="text"
                android:singleLine="false" />

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_model" />

            <EditText
                android:id="@+id/editText_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="0.2"
                    android:text="@string/tv_price" />

                <EditText
                    android:id="@+id/editText_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:gravity="end"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="0.2"
                    android:text="@string/tv_quantity" />

                <TextView
                    android:id="@+id/tv_quantity_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="end"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_quantity_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="0.2"
                    android:onClick="showQuantityProductChangeActivityAdd"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/button_quantity_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="0.2"
                    android:onClick="showQuantityProductChangeActivitySubstract"
                    android:text="@string/minus" />
            </LinearLayout>

            <Button
                android:id="@+id/button_save_product_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="saveChanges"
                android:text="@string/button_save"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>