<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:isScrollContainer="false"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:onClick="addProduct"
                android:text="@string/add_product_button"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_remove"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:onClick="removeProduct"
                android:text="@string/remove_product_button"
                android:textAllCaps="false" />

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_manufacturer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tv_manufacturer"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.4"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tv_model"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tv_price"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tv_quantity"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/layout_swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:id="@+id/table_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TableLayout>
            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>